--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: ^15.0.0
   google_sign_in: ^6.3.0
   cloud_firestore: ^5.6.6
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
