--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_screenutil: ^5.9.0
+  flutter_screenutil: ^5.9.3
   google_maps_flutter: ^2.12.1
   google_fonts: ^6.2.1
   firebase_core: ^3.13.0
@@ -45,6 +45,7 @@ dependencies:
   google_sign_in: ^6.3.0
   cloud_firestore: ^5.6.6
   logger: ^2.5.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
